crates/swc_ecma_parser/tests/typescript-errors/esDecorators/classDeclaration/esDecorators-classDeclaration-exportModifier/file7.ts
// @filename: file7.js

// error
@dec export default @dec class C7 {}
